--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "endOfLine": "lf",
-  "semi": false,
-  "singleQuote": false,
+  "semi": true,
+  "singleQuote": true,
+  "tabs": false,
   "tabWidth": 4,
   "trailingComma": "es5"
 }
