--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "airbnb",
+    "extends": ["airbnb", "prettier"],
     "parser": "babel-eslint",
     "rules": {
         "arrow-parens": ["error", "as-needed"],
