--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^10.0.2",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0"
   },
